# muzze

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
muzze-bitflags/: Cargo.toml  README.md
muzze-bitflags/src/: bitvec16.rs  lib.rs  u4vec16.rs  u4x2.rs
muzze-std/: Cargo.toml  README.md
muzze-std/src/: accidental.rs  chord.rs  degree.rs  degreex.rs  interval.rs  lib.rs  scale.rs  step.rs
muzze-std/src/utils/: bitvec16.rs  mod.rs  u4vec16.rs  u4x2.rs
